--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   sqflite: ^2.2.8+4
   dio: ^5.1.2
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
